make sure option menus don't overlap (temporary solution)

--- a/exist/salmer/style/mei.css
+++ b/exist/salmer/style/mei.css
@@ -183,6 +183,10 @@
 
 
 /* Place and format option menus. */
+.mei_options + .mei {
+    min-height: 200px;  /* make sure there is room for the menu if a menu is displayed */
+}
+
 .mei_options {
     /*float: right;*/
     position: absolute;
